--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title></title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Me</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-"I Love Lamp"
+<body class="bg-gray-50 text-gray-800 flex flex-col min-h-screen">
+
+  <!-- Header -->
+  <header class="p-6 text-center bg-white shadow-sm">
+    <h1 class="text-3xl font-bold text-indigo-600">Hey there 👋</h1>
+  </header>
+
+  <!-- Main -->
+  <main class="flex-1 flex flex-col items-center justify-center text-center px-6">
+    <img src="https://avatars.githubusercontent.com/u/9919?s=200&v=4" alt="Avatar"
+         class="w-32 h-32 rounded-full mb-6 shadow-md">
+    <h2 class="text-2xl font-semibold mb-3">I’m Mattias</h2>
+
+    <p class="text-gray-600 max-w-2xl leading-relaxed">
+      I enjoy building clean, functional software — especially in <span class="text-indigo-600 font-medium">Java</span> and 
+      crafting elegant <span class="text-indigo-600 font-medium">JavaFX</span> interfaces.  
+      <br><br>
+		I spend a lot of time <span class="text-indigo-600 font-medium">tinkering with Linux systems</span>, 
+		optimizing <span class="text-indigo-600 font-medium">Sunshine</span> streaming setups, 
+		and polishing <span class="text-indigo-600 font-medium">Hyprland</span> configs.
+		<br><br>
+      Outside of coding, I’m usually <span class="text-indigo-600 font-medium">modding games</span>, 
+      managing my <span class="text-indigo-600 font-medium">Plex and Unraid</span> setups, or experimenting with 
+      new ways to streamline workflows across systems.
+    </p>
+
+    <div class="mt-10 flex space-x-6">
+      <a href="#" class="text-indigo-600 hover:underline">GitHub</a>
+      <a href="#" class="text-indigo-600 hover:underline">LinkedIn</a>
+      <a href="#" class="text-indigo-600 hover:underline">Contact</a>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="text-center py-4 text-gray-500 text-sm border-t">
+    &copy; <span id="year"></span> Developer. Built with ❤️, Java, and heavy metal.
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+
 </body>
 </html>
-
-
