Update LinkedIn and Contact links in index.html

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
     <div class="mt-10 flex space-x-6">
       <a href="#" class="text-indigo-600 hover:underline">GitHub</a>
-      <a href="#" class="text-indigo-600 hover:underline">LinkedIn</a>
-      <a href="#" class="text-indigo-600 hover:underline">Contact</a>
+      <a href="https://www.linkedin.com/in/mattias-karlsson-06aa0a76/" class="text-indigo-600 hover:underline">LinkedIn</a>
+      <a href="mailto:mattias.erik.karlsson@gmail.com" class="text-indigo-600 hover:underline">Contact</a>
     </div>
   </main>
 
   <!-- Footer -->
   <footer class="text-center py-4 text-gray-500 text-sm border-t">
-    &copy; <span id="year"></span> Developer. Built with ❤️, Java, and heavy metal.
+    &copy; <span id="year"></span> Mattias. Built with ❤️, Java, and heavy metal.
   </footer>
 
   <script>
