--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </p>
 
     <div class="mt-10 flex space-x-6">
-      <a href="#" class="text-indigo-600 hover:underline">GitHub</a>
+      <a href="https://github.com/materka" class="text-indigo-600 hover:underline">GitHub</a>
       <a href="https://www.linkedin.com/in/mattias-karlsson-06aa0a76/" class="text-indigo-600 hover:underline">LinkedIn</a>
       <a href="mailto:mattias.erik.karlsson@gmail.com" class="text-indigo-600 hover:underline">Contact</a>
     </div>
