Remove 'Java' from footer text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <!-- Footer -->
   <footer class="text-center py-4 text-gray-500 text-sm border-t">
-    &copy; <span id="year"></span> Mattias. Built with ❤️, Java, and heavy metal.
+    &copy; <span id="year"></span> Mattias. Built with ❤️ and heavy metal.
   </footer>
 
   <script>
